--- a/src/app/components/snake-page/snake-page.component.css
+++ b/src/app/components/snake-page/snake-page.component.css
@@ -47,6 +47,7 @@ h2 {
   color: white;
   text-align: left;
   font-weight: bold;
+  font-size: 18.7px;
 }
 
 .content-table th,
